--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -21,10 +21,13 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
-    "bootstrap": "^4.5.0",
+    "@fortawesome/fontawesome-free": "^5.14.0",
+    "angular-bootstrap-md": "^10.0.0",
+    "bootstrap": "^4.5.2",
     "bootstrap-icons": "^1.0.0-alpha5",
-    "primeng": "^10.0.0",
+    "mdbootstrap": "^4.19.1",
     "primeicons": "^4.0.0",
+    "primeng": "^10.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
