--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.5.2",
     "bootstrap-icons": "^1.0.0-alpha5",
     "mdbootstrap": "^4.19.1",
+    "ngx-progressbar": "^6.0.3",
     "primeicons": "^4.0.0",
     "primeng": "^10.0.0",
     "rxjs": "~6.5.5",
